--- a/KU เกษตรศาสตร์/Activities.html
+++ b/KU เกษตรศาสตร์/Activities.html
@@ -41,7 +41,7 @@
    thanakorn pradabwet
    </h1>
     <span id="sss">
-        <p><a href="HOME.html">HOME</a></p>
+        <p><a href="index.html">HOME</a></p>
         <p><a href="statement of purpose.html">statement of purpose</a></p>
         <p><a href="Profile.html">Profile</a></p>
         <p><a href="Education.html">Education</a></p>
